<resources>

    <!--qrcode-->
    <string name="str_scan_title">扫一扫</string>
    <string name="str_open_light">开启闪光灯</string>
    <string name="str_close_light">关闭闪光灯</string>
    <string name="str_scan_hint">取景框对准二维码, 即可自动扫描</string>
    <string name="net_error">网络错误，请重新尝试</string>
    <!--app-->
    <string name="empty"></string>
    <string name="send">发送</string>
    <string name="black_list_send_tip">消息已发送，但对方拒收</string>
    <string name="app_name">韩乐讯</string>
    <string name="tab1">首页</string>
    <string name="tab2">视频</string>
    <string name="tab3">消息</string>
    <string name="tab4">我的</string>
    <string name="search">Search</string>
    <string name="add_attention">+ 关注</string>
    <string name="text">#</string>
    <string name="recently_watched">最近观看</string>
    <string name="now_live">正在直播</string>
    <string name="look_more"><![CDATA[查看更多>]]></string>
    <string name="add_friend">添加好友</string>
    <string name="friend_list">好友列表</string>
    <string name="friend_pyq">好友动态圈</string>
    <string name="like">点赞</string>
    <string name="fans">粉丝</string>
    <string name="attention">关注</string>
    <string name="sing_in">签到有礼</string>
    <string name="come_sing">来签到 领福利</string>
    <string name="invite_friend">邀请好友</string>
    <string name="invite_desc">邀好友 赚奖励</string>
    <string name="lb">乐讯币</string>
    <string name="wallet">钱包</string>
    <string name="notification">通知</string>
    <string name="history">历史</string>
    <string name="collect">收藏</string>
    <string name="attention_to">已关注</string>
    <string name="attention_each_other">互相关注</string>
    <string name="user_info">个人资料</string>
    <string name="header">头像：</string>
    <string name="nick_name">昵称：</string>
    <string name="app_id">乐讯号：</string>
    <string name="sex">性别：</string>
    <string name="age">年龄：</string>
    <string name="address">所在地</string>
    <string name="my_qrcode">我的二维码：</string>
    <string name="personalized_signature">个性签名：</string>
    <string name="submit">提交</string>
    <string name="share">分享</string>
    <string name="wallet_balance">钱包余额</string>
    <string name="recharge">充值</string>
    <string name="withdraw">提现</string>
    <string name="bank_card">银行卡</string>
    <string name="bill">账单</string>
    <string name="skip">跳过</string>
    <string name="register">注册</string>
    <string name="have_app_user">已经韩乐讯账户了？</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="gallery">相册</string>
    <string name="photo">拍照</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="code">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="sure_password">确认密码</string>
    <string name="complete_info">完善信息</string>
    <string name="enter_name">输入昵称</string>
    <string name="select_birth_date">选择出生日期</string>
    <string name="format_get_code">%1$ss</string>
    <string name="again_exit">再按一次返回键退出</string>
    <string name="girl">女生</string>
    <string name="boy">男生</string>
    <string name="sure">确定</string>
    <string name="year">年</string>
    <string name="mouth">月</string>
    <string name="day">日</string>
    <string name="january">1</string>
    <string name="february">2</string>
    <string name="march">3</string>
    <string name="april">4</string>
    <string name="may">5</string>
    <string name="june">6</string>
    <string name="july">7</string>
    <string name="august">8</string>
    <string name="september">9</string>
    <string name="october">10</string>
    <string name="november">11</string>
    <string name="december">12</string>
    <string name="code_login">验证码登录</string>
    <string name="psw_login">密码登录</string>
    <string name="forget_psw">忘记密码？</string>
    <string name="three_login">第三方登录</string>
    <string name="about_my">\@我的</string>
    <string name="comment">评论</string>
    <string name="detail">明细</string>
    <string name="lb_use">乐讯币用途</string>
    <string name="lb_task">做任务 领取乐讯币</string>
    <string name="my_wallet">我的钱包</string>
    <string name="balance">余额(元)</string>
    <string name="check_in">签到</string>
    <string name="exchange">兑换</string>
    <string name="lcoin_detail">乐币明细</string>
    <string name="i_want_exchange">我要兑换</string>
    <string name="current_lb">当前乐讯币</string>
    <string name="exchange_record">兑换记录</string>
    <string name="exchange_to">兑换至</string>
    <string name="withdraw_to_alipay">提现至支付宝</string>
    <string name="withdraw_to_wx">提现至微信</string>
    <string name="withdraw_type">提现方式</string>
    <string name="withdraw_money">提现金额</string>
    <string name="all_withdraw">全部提现</string>
    <string name="please_enter_withdraw_money">请输入提现金额</string>
    <string name="bill_detail">账单明细</string>
    <string name="rechange_price">充值￥%1$s</string>
    <string name="withdraw_price">提现￥%1$s</string>
    <string name="my_app_qrcode">我的乐讯码</string>
    <string name="touch_your_light">轻触照亮</string>
    <string name="my_qrcode2">我的二维码</string>
    <string name="save_album">保存到相册</string>
    <string name="use_app_scan">使用乐讯扫码，加我好友</string>
    <string name="setting">设置</string>
    <string name="accounts_and_security">账号与安全</string>
    <string name="is_binding_phone">已绑定手机号</string>
    <string name="message_setting">消息设置</string>
    <string name="privacy_agreement">隐私协议</string>
    <string name="about_ours">关于我们</string>
    <string name="clear_cache">清除缓存</string>
    <string name="video_load">视频加载</string>
    <string name="about_app">关于韩乐讯</string>
    <string name="out_login">退出登录</string>
    <string name="my_come_answer">我来答</string>
    <string name="quiz">投票</string>
    <string name="quiz_to">已投票</string>
    <string name="single_quiz">单选投票</string>
    <string name="please_enter_name2">请输入昵称</string>
    <string name="update_nick_name">修改昵称</string>
    <string name="write_comment">聊两句</string>
    <string name="wechat_share">微信分享</string>
    <string name="answer_question">问答</string>
    <string name="iam_answer">我来答</string>
    <string name="accept">采纳</string>
    <string name="channel_management">频道管理</string>
    <string name="edit">编辑</string>
    <string name="my_channel">我的频道</string>
    <string name="add_channel">点击添加频道</string>
    <string name="comment_detail">评论详情</string>
    <string name="reply_count">%1$s条回复</string>
    <string name="complain">投诉</string>
    <string name="please_select_you_want_to_complaint_type">请选择您想要投诉的类型</string>
    <string name="please_explain_the_specific_reasons">请说明具体原因</string>
    <string name="word_count">0/500</string>
    <string name="please_enter_content">请具体描述原因</string>
    <string name="shape_to">分享到</string>
    <string name="share_friend">私信好友</string>
    <string name="qq">QQ</string>
    <string name="qq_room">QQ空间</string>
    <string name="wx">微信</string>
    <string name="pyq">朋友圈</string>
    <string name="wb">微博</string>
    <string name="copy_url">复制链接</string>
    <string name="share_img">生成长图</string>
    <string name="report">举报</string>
    <string name="ask_two">聊两句</string>
    <string name="attention_friend">关注好友</string>
    <string name="phone_or_nickname">手机号或昵称</string>
    <string name="for_you">为你推荐</string>
    <string name="hot_people">热门人物</string>
    <string name="attention_all">+ 关注以上全部</string>
    <string name="issue_pyq">发表动态</string>
    <string name="issue">发布</string>
    <string name="shape_my_app_pyq">分享我的韩乐讯动态</string>
    <string name="user_im">私信</string>
    <string name="account_info">账号信息</string>
    <string name="qrcode">二维码：</string>
    <string name="user_data">个人信息</string>
    <string name="user_address">所在地：</string>
    <string name="all">全部</string>
    <string name="select_look_type">选择查看类型</string>
    <string name="del">删除</string>
    <string name="get">领取</string>
    <string name="to_get">已领取</string>
    <string name="exchange_lb">兑换乐讯币</string>
    <string name="please_enter">请输入</string>
    <string name="exchange_now">立即兑换</string>
    <string name="reply_1">回复</string>
    <string name="withdraw_account">提现账号</string>
    <string name="alipay_account">支付宝账号</string>
    <string name="wx_account">微信账号</string>
    <string name="quiz_end_look">(投票后结果可见)</string>
    <string name="bi_rmb">10乐讯币=1元</string>
    <string name="come_on_edit_your_sing">快来编辑您的个性签名吧~</string>
    <string name="system">系统</string>
    <string name="sing_get">签到领取</string>
    <string name="task">日常任务</string>
    <string name="invite_friend_give_you_money">邀请好友赚现金奖励</string>
    <string name="enter_code">填写邀请码</string>
    <string name="invite_list">邀请记录</string>
    <string name="friend_lxh">好友乐讯号</string>
    <string name="invite_time">邀请时间</string>
    <string name="get_money">获得奖励</string>
    <string name="media">自媒体人</string>
    <string name="null_text">不能发送空内容</string>
    <string name="history_search">历史搜索</string>
    <string name="lahei">拉黑</string>
    <string name="account_black">您的账号已被官方拉黑，请联系官方</string>
    <string name="img_share_to">图片分享至</string>
    <string name="save_img">保存图片</string>
    <string name="cancel_share">取消分享</string>
    <string name="invite_friend_play">邀请好友,和你一起玩转韩乐讯吧</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="please">请输入</string>
    <string name="bind">绑定</string>
    <string name="buy_coin">购买乐讯币</string>
    <string name="pay_type">支付方式</string>
    <string name="buy">购买：</string>
    <string name="pay">付款：</string>
    <string name="pay_to_wx">微信支付</string>
    <string name="can_user_coin">剩余可用乐讯币：</string>
    <string name="coin_desc">· 乐讯币可用于直播打赏、兑换到钱包</string>
    <string name="account_security">账号与安全</string>
    <string name="lxh">乐讯号</string>
    <string name="update_phone_not_login">更换后，原手机号将不能用于登录</string>
    <string name="update_phone">更换手机号</string>
    <string name="pay_result">支付结果</string>
    <string name="fanzhuan">翻转</string>
    <string name="select_type">选择话题</string>
    <string name="open_video_live">开始视频直播</string>
    <string name="change_cover">更换封面</string>
    <string name="part">参与</string>
    <string name="yi_part">已参与</string>
    <string name="live_finish">直播已结束</string>
    <string name="live_time">本次直播时长</string>
    <string name="back">返回</string>
    <string name="buffering">缓冲中</string>
    <string name="send_gift">送了</string>
    <string name="gift">礼物</string>
    <string name="hot_new">热门新闻</string>
    <string name="get_like">获赞</string>
    <string name="sousuo">搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="enter_invite_code">填写邀请码（选填）</string>
    <string name="clear_over">清空</string>
    <string name="alipay">支付宝支付</string>
    <string name="login_look">登录后可查看您的关注</string>
    <string name="now_login">立即登录</string>
    <string name="unlike">不喜欢</string>
    <string name="all_comment">全部评论</string>
</resources>
