<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <View
        android:id="@+id/other_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_top_grayf7"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/shape_to"
            android:textColor="@color/color_b2"
            android:textSize="@dimen/sp_12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_12"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_share_friend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_share_friend"
                android:drawablePadding="@dimen/dp_2"
                android:gravity="center"
                android:text="@string/share_friend"
                android:textColor="@color/color_161824"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_share_qq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_share_qq"
                android:drawablePadding="@dimen/dp_2"
                android:gravity="center"
                android:text="@string/qq"
                android:textColor="@color/color_161824"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_share_qq_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_share_qq_room"
                android:drawablePadding="@dimen/dp_2"
                android:gravity="center"
                android:text="@string/qq_room"
                android:textColor="@color/color_161824"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_share_wx"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_share_wechat"
                android:drawablePadding="@dimen/dp_2"
                android:gravity="center"
                android:text="@string/wx"
                android:textColor="@color/color_161824"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_share_wx_pyq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_share_wechat_pyq"
                android:drawablePadding="@dimen/dp_2"
                android:gravity="center"
                android:text="@string/pyq"
                android:textColor="@color/color_161824"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_share_wb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_share_wb"
                android:drawablePadding="@dimen/dp_2"
                android:gravity="center"
                android:text="@string/wb"
                android:textColor="@color/color_161824"
                android:textSize="@dimen/sp_12" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@color/color_ec"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_share_img"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_share_img"
                android:drawablePadding="@dimen/dp_2"
                android:gravity="center"
                android:text="@string/share_img"
                android:textColor="@color/color_161824"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_copy_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_copy_url"
                android:drawablePadding="@dimen/dp_2"
                android:gravity="center"
                android:text="@string/copy_url"
                android:textColor="@color/color_161824"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_complaint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_complaint"
                android:drawablePadding="@dimen/dp_2"
                android:gravity="center"
                android:text="@string/report"
                android:textColor="@color/color_161824"
                android:textSize="@dimen/sp_12" />
            <TextView
                android:id="@+id/tv_collect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp_2"
                android:gravity="center"
                android:drawableTop="@drawable/ic_collect_white"
                android:text="@string/collect"
                android:textColor="@color/color_161824"
                android:textSize="@dimen/sp_12"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp_2"
                android:gravity="center"
                android:textColor="@color/color_161824"
                android:textSize="@dimen/sp_12" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp_2"
                android:gravity="center"
                android:textColor="@color/color_161824"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_15"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_78"
            android:gravity="center"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>