<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/other_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_linear"
        android:padding="@dimen/dp_56"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_webview"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_top_grayf7"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/img_share_to"
            android:textColor="@color/color_b2"
            android:textSize="@dimen/sp_12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_12"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_share_album"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_save_img_blue"
                android:drawablePadding="@dimen/dp_2"
                android:gravity="center"
                android:text="@string/save_img"
                android:textColor="@color/color_161824"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_share_qq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_share_qq"
                android:drawablePadding="@dimen/dp_2"
                android:gravity="center"
                android:text="@string/qq"
                android:textColor="@color/color_161824"
                android:textSize="@dimen/sp_12" />


            <TextView
                android:id="@+id/tv_share_wx"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_share_wechat"
                android:drawablePadding="@dimen/dp_2"
                android:gravity="center"
                android:text="@string/wx"
                android:textColor="@color/color_161824"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_share_wb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_share_wb"
                android:drawablePadding="@dimen/dp_2"
                android:gravity="center"
                android:text="@string/wb"
                android:textColor="@color/color_161824"
                android:textSize="@dimen/sp_12" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_15"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_78"
            android:gravity="center"
            android:text="@string/cancel_share"/>
    </LinearLayout>


</RelativeLayout>