<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.public_ac.activity.BindPhoneActivity">
    <RelativeLayout
        android:id="@+id/view_title"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:padding="@dimen/dp_15"
        android:layout_height="@dimen/dp_50">
        <RelativeLayout
            android:id="@+id/rl_finish"
            android:layout_width="@dimen/dp_15"
            android:visibility="gone"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_black_finish"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_303133"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/sp_16"
            android:text="@string/bind_phone"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_15"
        android:background="@drawable/shape_white_bg_10"
        android:layout_height="@dimen/dp_68">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:layout_gravity="center"
            android:textColor="@color/color_161824"
            android:text="@string/phone_number"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/dp_20"
            android:background="@null"
            android:layout_marginEnd="@dimen/dp_10"
            android:singleLine="true"
            android:inputType="phone"
            android:paddingStart="@dimen/dp_5"
            android:paddingEnd="@dimen/dp_5"
            android:layout_height="match_parent"
            android:hint="@string/please"
            android:textSize="@dimen/sp_12"
            android:textColorHint="@color/color_78"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_get"
            android:layout_width="@dimen/dp_65"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="center"
            android:text="@string/get_code"
            android:textSize="@dimen/sp_12"
            android:gravity="center"
            android:textColor="@color/color_fc5a8e"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_15"
        android:background="@drawable/shape_white_bg_10"
        android:layout_height="@dimen/dp_68">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:layout_gravity="center"
            android:textColor="@color/color_161824"
            android:text="@string/code"/>

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/dp_20"
            android:background="@null"
            android:layout_marginEnd="@dimen/dp_10"
            android:singleLine="true"
            android:inputType="phone"
            android:paddingStart="@dimen/dp_5"
            android:paddingEnd="@dimen/dp_5"
            android:layout_height="match_parent"
            android:hint="@string/please"
            android:textSize="@dimen/sp_12"
            android:textColorHint="@color/color_78"
            android:layout_weight="1"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tv_bind"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_38"
        android:background="@drawable/shape_radius_pink"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_40"
        android:text="@string/bind"
        android:gravity="center"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/dp_100"/>

</LinearLayout>