<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".ui.home.activity.ChannelManageActivity">

    <RelativeLayout
        android:id="@+id/view_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/white"
        android:padding="@dimen/dp_15">

        <RelativeLayout
            android:id="@+id/rl_finish"
            android:layout_width="@dimen/dp_15"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_black_finish" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/channel_management"
            android:textColor="@color/color_161824"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@color/color_fc5a8e"
            android:textSize="@dimen/sp_16"
            android:text="@string/edit"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_12"
        android:text="@string/my_channel"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/color_161824"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_mychannel"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_12"
        android:text="@string/add_channel"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/color_161824"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_addchannel"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>